# echos

./: .gitignore  Readme.md  architecture.mmd  pyproject.toml
demo/: agent_demo.py  quick_start.py  song_create_demo.py
midi/: Sacred Play Secret Place.mid
src/: class_bundler.py
src/MuzaiCore/: agent_main.py  dawdreamer_main.py  facade.py  main.py  mock_main.py  real_main.py
src/MuzaiCore/agent/: tools.py
src/MuzaiCore/backends/common/: device_manager.py  message_queue.py
src/MuzaiCore/backends/dawdreamer/: engine.py  factory.py  manager.py  message_handler.py  messages.py  persistence.py  registry.py  render_graph.py  sync_controller.py  transport.py
src/MuzaiCore/backends/mock/: __init__.py  engine.py  factory.py  register.py  sync_controller.py
src/MuzaiCore/backends/pedalboard/: __init__.py  engine.py  factory.py  message_handler.py  messages.py  nodes.py  registry.py  render_graph.py  sync_controller.py  timeline.py
src/MuzaiCore/backends/real/: factory.py  plugin.py  transport.py
src/MuzaiCore/core/: engine.py  event_bus.py  manager.py  mixer.py  parameter.py  persistence.py  plugin.py  plugin_cache.py  project.py  router.py  sync_controller.py  timeline.py  track.py
src/MuzaiCore/core/history/: command_base.py  command_manager.py
src/MuzaiCore/drivers/dawdreamer_driver/: audio_engine.py  device_manager.py  manager.py
src/MuzaiCore/drivers/mock/: audio_engine.py  manager.py  plugin_registry.py
src/MuzaiCore/drivers/real/: audio_engine.py  manager.py  plugin_instance.py  plugin_registry.py
src/MuzaiCore/implementations/mock/: audio_engine.py  device_manager.py  manager.py  plugin.py
src/MuzaiCore/implementations/real/: audio_engine.py
src/MuzaiCore/implementations/services/: __init__.py  node_service.py  transport_service.py
src/MuzaiCore/interfaces/: IAudioEngine.py  IAudioProcessor.py  ICommand.py  IMixerChannel.py  INode.py  IParameter.py  IPlugin.py  IPluginRegistry.py  IProject.py  IRouter.py  ITimeline.py  ITrack.py  __init__.py
src/MuzaiCore/interfaces/services/: ibase_service.py  iediting_service.py  ihistory_service.py  inode_service.py  ipersistence_service.py  iproject_service.py  iquery_service.py  irouting_service.py  isystem_service.py  itransport_service.py
src/MuzaiCore/interfaces/system/: __init__.py  iaudio_engin.py  iaudio_processor.py  icommand.py  idaw_manager.py  idevice_manager.py  iengine.py  ievent_bus.py  ifactory.py  ilifecycle.py  imixer_channel.py  inode.py  inode_factory.py  iparameter.py  ipersistence.py  iplugin_registry.py  iproject.py  (+5 more)
src/MuzaiCore/models/: __init__.py  api_model.py  clip_model.py  device_model.py  engine_model.py  event_model.py  node_model.py  parameter_model.py  plugin_model.py  project_model.py  timelime_model.py  timeline_model.py
src/MuzaiCore/services/: IEditingService.py  IHistoryService.py  INodeService.py  IProjectService.py  IQueryService.py  IRoutingService.py  ISystemService.py  ITransportService.py  __init__.py  api_types.py  editing_service.py  history_service.py  node_service.py  persistence_service.py  project_service.py  query_service.py  routing_service.py  system_service.py  transport_service.py
src/MuzaiCore/subsystems/: router.py  timeline.py
src/echos/: facade.py
src/echos/agent/: __init__.py  tools.py
src/echos/core/: __init__.py  engine_controller.py  event_bus.py  manager.py  mixer.py  parameter.py  persistence.py  plugin.py  project.py  router.py  timeline.py  track.py
src/echos/models/: __init__.py  api_model.py  clip_model.py  engine_model.py  event_model.py  lifecycle_model.py  mixer_model.py  node_model.py  parameter_model.py  plugin_model.py  router_model.py  timeline_model.py
src/echos/services/: __init__.py  editing_service.py  history_service.py  mixer_service.py  node_service.py  project_service.py  query_service.py  routing_service.py  system_service.py  track_service.py  transport_service.py
src/echos/utils/: scan_worker.py
tests/: backend_test.py  unit_test.py
(+97 files in other folders)
