[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "echos"
version = "v0.0.1"
authors = [
  { name="Zhilin Wang", email="zhilin.nlp@gmail.com" },
]
description = "A modular, interface-driven AI agent for music co-production."
readme = "Readme.md"
requires-python = ">=3.10"
license = { file="LICENSE" }
keywords = ["ai", "music", "daw", "midi", "agent", "llm", "composition"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache 2.0 License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pedalboard",
    "sounddevice",
    "mido",
    "python-rtmidi",
    "networkx",
]

[project.optional-dependencies]
realtime = [
    "pyfluidsynth >= 1.3.0",
]
notebook = [
    "jupyterlab",
    "ipykernel",
]
dev = [
    "build",
    "pytest", # Recommended for testing src layouts
]

# --- Project URLs ---
[project.urls]

Homepage = "https://github.com/linzwcs/echos"

"Bug Tracker" = "https://github.com/linzwcs/echos/issues"

# ==============================================================================
# Tool Configuration for Setuptools
# ==============================================================================
[tool.setuptools.packages.find]
# CRITICAL CHANGE FOR SRC LAYOUT:
# Tell setuptools to look for packages inside the 'src' directory.

where = ["src"]
# IMPORTANT: Explicitly exclude the tests package from the final build.
exclude = [""]